# stitch

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  package-lock.json  package.json  vercel.json
.github/: dependabot.yml
.github/workflows/: ci.yml  security.yml
docs/: ci.md  dependencies.md  dump.md  handoff.md  output.md  performance.md  project-log.md  project-spec.md  sigma.md  stql.md
scripts/: bench-local.sh
site/: build.mjs  styles.css
site/pages/: about.md  basics.md  faq.md  getting-started.md  index.md
src/: cli.rs  cli_tests.rs  main.rs
src/event/: mod.rs  tests.rs
src/input/: discover.rs  discover_tests.rs  evtx.rs  mod.rs
src/output/: mod.rs  tests.rs
src/query/: mod.rs  tests.rs
src/runtime/: mod.rs  tests.rs
src/sigma/: mod.rs  tests.rs
tests/: generated_evtx_fixtures.rs  sigma_hunt_fixtures.rs
tests/fixtures/: README.md
tests/fixtures/correlation-evtx/: sysmon-correlation.evtx
tests/fixtures/evtx/: aggregation-lateral-logons.evtx  defender-operational.evtx  powershell-activity.evtx  security-auth.evtx  sysmon-activity.evtx  system-services.evtx  task-scheduler-operational.evtx  wmi-activity.evtx
tests/fixtures/sigma/: defender_payload_detection.yml  sysmon_powershell_network.yml  task_scheduler_powershell.yml  wmi_permanent_consumer.yml
tests/fixtures/sigma-correlation/: sysmon_process_activity_count.yml
tests/fixtures/sigma-grammar/: defender_null_condition_list.yml  powershell_keyword_all.yml  sysmon_alternative_maps.yml
tests/fixtures/source/: aggregation-lateral-logons.jsonl  defender-operational.jsonl  (+7 more)
(+13 files in other folders)
