[package]
name = "stitch"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
evtx = "0.12.2"
globset = "0.4.16"
regex = "1.11.1"
serde_json = "1.0.140"
time = { version = "0.3.41", features = ["parsing"] }
thiserror = "2.0.12"
serde = { version = "1.0.228", features = ["derive"] }
noyalib = "0.0.8"
rayon = "1.10.0"

[dev-dependencies]
tempfile = "3.20.0"
